<!-- Esempio di item_esame.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/nomeEsameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_esame"
        android:textColor="@color/blue"
        />


    <TextView
        android:id="@+id/numeroCFUTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cfu"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/votoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voto"
        android:textColor="@color/blue"/>

</LinearLayout>
