<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnAccedi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/login_button"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btnRegistrati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registratione_button"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:layout_below="@id/btnAccedi"
        android:layout_marginTop="16dp" />
</RelativeLayout>
